// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_package = "ohos.devtools.datasources.transport.grpc.service";
option optimize_for = LITE_RUNTIME;

message HttpRequestHead {
    string url = 1;
    string method = 2;
    string fields = 3;
    string trace = 4;
}

message HttpResponseHead {
    string fields = 1;
}

message HttpBody {
    string payload_id = 1;
    int32 payload_size = 2;
    bytes payload_fields = 3;
}

message HttpEndStatus {
    bool aborted = 1;
}

// thread
message AgentThread {
    int64 id = 1;
    string name = 2;
}

message AgentNetworkEvent {
    // timestamp obtained by CLOCK_REALTIME
    uint64 tv_sec = 1;
    uint64 tv_nsec = 2;
    int64 event_id = 3;

    oneof event {
        HttpRequestHead request_head = 4;
        HttpResponseHead response_head = 5;
        HttpBody request_body = 6;
        HttpBody response_body = 7;
        HttpEndStatus end_status = 8;
        AgentThread agent_thread = 9;
    }
}

message BatchAgentNetworkEvent {
    repeated AgentNetworkEvent events = 1;
}